--- a/styles/main.css
+++ b/styles/main.css
@@ -41,6 +41,7 @@
     text-transform: lowercase;
     text-decoration: none;
     color: var(--clr-light);
+    z-index: 100;
 }
 
 .menu a:hover {
@@ -71,10 +72,10 @@
 
 .hero-inner-blure {
     position: absolute;
-    top: 0;
+    top: 20%;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 80%;
     background: linear-gradient(
         180deg,
         rgba(0,0,0,0) 0%,
